bk_ida/mcfida/c3/sort_basket
pbeampp.c:562:22: error: use of undeclared identifier 'net'
v12 = ( BASKET *)*( &net.checksum + v10--); 
                     ^
pbeampp.c:568:5: error: use of undeclared identifier 'net'
*( &net.checksum + v11) = ( __int64)v9; 
    ^
2 errors generated.
